fix(gux-tabs-advanced): use spacing variables

--- a/src/components/stable/gux-tabs-advanced/gux-tab-advanced-list/gux-tab-advanced-list.less
+++ b/src/components/stable/gux-tabs-advanced/gux-tab-advanced-list/gux-tab-advanced-list.less
@@ -13,7 +13,7 @@ gux-tab-advanced-list {
     align-items: flex-end;
     width: 100%;
     height: 50px;
-    margin-bottom: 16px;
+    margin-bottom: @spacing-medium;
     overflow-x: auto;
     overflow-y: hidden;
     background-color: @gux-grey-90;
@@ -30,7 +30,7 @@ gux-tab-advanced-list {
         justify-content: center;
         width: 35px;
         height: 50px;
-        margin-left: 2px;
+        margin-left: @spacing-3xs;
         color: @gux-black-50;
         background-color: @gux-grey-60;
         border: none;
